update some animation

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus reiciendis eveniet tempore quae ratione quod,
             </div>
         </div>
-        <div class="right">
+        <div class="right" onmousemove="animateBackground(event)" onmouseleave="stopAnimation()">
             <img src="images/task-three/about.jpg" alt="">
             <div></div>
         </div>
@@ -122,5 +122,7 @@
     <footer>
         <p>Copyright &copy; 2022 Wadi Digla Club . All rights reversed | Design by Moaaz Elgharip</p>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
